--- a/network/red.html
+++ b/network/red.html
@@ -43,22 +43,22 @@
                 <h1>Dispositivos de Red</h1>
                 <p>Los dispositivos de red son componentes esenciales para la comunicación y la transferencia de datos en cualquier infraestructura de red. Aquí vamos a explorar algunos de los dispositivos más comunes y su función en una red:</p>
                 <br>
-                <ul style="list-style-type: square;">
-                    <li><marcador class="resaltado5">Firewall:</marcador> Un firewall es un dispositivo o software diseñado para proteger una red contra amenazas externas y garantizar la seguridad de los datos que circulan por ella. Puede bloquear o permitir el tráfico en función de reglas específicas y proteger contra intrusiones y malware.</li>
+                <ul style="list-style-type: none;">
+                    <li>✶ <marcador class="resaltado5">Firewall:</marcador> Un firewall es un dispositivo o software diseñado para proteger una red contra amenazas externas y garantizar la seguridad de los datos que circulan por ella. Puede bloquear o permitir el tráfico en función de reglas específicas y proteger contra intrusiones y malware.</li>
                     <p>Es capaz de realizar una Inspección profunda de paquetes (DPI), filtrado por aplicación, VPN (Red Privada Virtual) y proxies para mayor seguridad.</p>
                     <p>Existen los firewalls de hardware y firewalls de software. Los firewalls de hardware son dispositivos independientes, mientras que los firewalls de software se ejecutan en sistemas operativos.</p>
-                    <li><marcador class="resaltado5">Hub:</marcador> Un hub es un dispositivo básico que opera en la capa física de una red. Su función principal es recibir datos desde un dispositivo y transmitirlos a todos los demás dispositivos conectados en la misma red. Sin embargo, su uso ha disminuido en favor de dispositivos más avanzados como los switches.</li>
+                    <li>✶ <marcador class="resaltado5">Hub:</marcador> Un hub es un dispositivo básico que opera en la capa física de una red. Su función principal es recibir datos desde un dispositivo y transmitirlos a todos los demás dispositivos conectados en la misma red. Sin embargo, su uso ha disminuido en favor de dispositivos más avanzados como los switches.</li>
                     <p>Es obsoleto en la mayoría de las redes modernas debido a su ineficiencia en la gestión del tráfico y la seguridad limitada.</p>
-                    <li><marcador class="resaltado5">Switch:</marcador> Un switch es un dispositivo de capa de enlace de datos que opera en una red local (LAN). A diferencia de un hub, un switch es inteligente y envía datos solo al dispositivo de destino correcto, lo que mejora significativamente la eficiencia de la red.</li>
+                    <li>✶ <marcador class="resaltado5">Switch:</marcador> Un switch es un dispositivo de capa de enlace de datos que opera en una red local (LAN). A diferencia de un hub, un switch es inteligente y envía datos solo al dispositivo de destino correcto, lo que mejora significativamente la eficiencia de la red.</li>
                     <p>Mejora la eficiencia de la red al enviar datos solo a los dispositivos de destino correctos, en lugar de a todos los dispositivos. Opera en la capa de enlace de datos.</p>
-                    <li><marcador class="resaltado5">Router:</marcador> Un router conecta diferentes redes, como una LAN y una WAN, y dirige el tráfico entre ellas. También realiza funciones como asignación de direcciones IP y gestión del tráfico de datos entre dispositivos dentro de una red.</li>
+                    <li>✶ <marcador class="resaltado5">Router:</marcador> Un router conecta diferentes redes, como una LAN y una WAN, y dirige el tráfico entre ellas. También realiza funciones como asignación de direcciones IP y gestión del tráfico de datos entre dispositivos dentro de una red.</li>
                     <p>También tiene características adicionales, como: NAT (Traducción de Direcciones de Red), calidad de servicio (QoS) y seguridad de firewall.</p>
-                    <li><marcador class="resaltado5">Antenas:</marcador> Las antenas se utilizan en dispositivos de red inalámbrica, como routers y puntos de acceso, para transmitir y recibir señales de radio. Vienen en varias formas y tamaños y desempeñan un papel clave en la calidad de la conexión inalámbrica. Amplificando y direccionando señales inalámbricas para mejorar la cobertura y el rendimiento de las redes Wi-Fi.</li>
+                    <li>✶ <marcador class="resaltado5">Antenas:</marcador> Las antenas se utilizan en dispositivos de red inalámbrica, como routers y puntos de acceso, para transmitir y recibir señales de radio. Vienen en varias formas y tamaños y desempeñan un papel clave en la calidad de la conexión inalámbrica. Amplificando y direccionando señales inalámbricas para mejorar la cobertura y el rendimiento de las redes Wi-Fi.</li>
                     <p>Se tiene las Omnidireccionales (para cobertura en todas las direcciones) y direccionales (para una cobertura específica en una dirección).</p>
                     <p>Las Antenas Punto a Punto establecen conexiones inalámbricas de alta velocidad entre dos ubicaciones específicas. Los ISP (Internet Service Provider) utilizan estas antenas para proporcionar conectividad de banda ancha a áreas remotas o para conectar edificios separados.</p>
                     <p>Las Antenas Sectoriales proporcionan cobertura inalámbrica en un área específica en forma de un sector. Los ISP utilizan estas antenas para ofrecer acceso inalámbrico a Internet en áreas urbanas y suburbanas.</p>
                     <p>Las Antenas Parabólicas concentran la señal en un punto focal para transmitir o recibir señales de largo alcance. Los ISP utilizan estas antenas para la conexión a larga distancia, como enlaces de conexión entre torres de comunicación.</p>
-                    <li><marcador class="resaltado5">Servidor:</marcador> Un servidor es un dispositivo central en una red que proporciona servicios, recursos y datos a otros dispositivos llamados clientes. Los servidores están diseñados para ser más potentes y confiables que las estaciones de trabajo típicas y están optimizados para ejecutar aplicaciones y servicios que requieren un alto rendimiento y disponibilidad.</li>
+                    <li>✶ <marcador class="resaltado5">Servidor:</marcador> Un servidor es un dispositivo central en una red que proporciona servicios, recursos y datos a otros dispositivos llamados clientes. Los servidores están diseñados para ser más potentes y confiables que las estaciones de trabajo típicas y están optimizados para ejecutar aplicaciones y servicios que requieren un alto rendimiento y disponibilidad.</li>
                     <p>Un servidor suele estar equipado con hardware de calidad empresarial, como múltiples procesadores, una gran cantidad de memoria RAM y almacenamiento de alta capacidad, como unidades de disco duro o unidades de estado sólido (SSD). Estos recursos permiten al servidor gestionar múltiples solicitudes de clientes de manera eficiente y ejecutar aplicaciones exigentes, como bases de datos, aplicaciones web y servicios de correo electrónico.</p>
                     <p>Uno de los roles clave de un servidor es alojar y administrar datos y servicios compartidos, como archivos, impresoras, sitios web y aplicaciones. Los servidores pueden ejecutar diversos sistemas operativos diseñados para entornos de servidor, como Windows Server, Linux o Unix.</p>
                     <p>La virtualización es una tecnología comúnmente utilizada en servidores que permite ejecutar múltiples sistemas operativos y aplicaciones en una sola máquina física. Esto ayuda a aprovechar al máximo los recursos del servidor y a aislar las aplicaciones para una mayor seguridad y confiabilidad.</p>
@@ -70,24 +70,24 @@
                 <h2>Topologías de Red</h2>
                 <p>Las topologías de red se refieren a la forma en que están conectados los dispositivos en una red. Aquí hay tres tipos comunes de topologías de red:</p>
                 <p><marcador class="resaltado5">Topología de Estrella:</marcador> En una topología de estrella, todos los dispositivos están conectados a un concentrador central o un switch. Esto facilita la administración y la identificación de problemas, pero si el concentrador central falla, toda la red puede verse afectada.</p>
-                <ul>
-                    <li>Ventajas: Facilidad de administración y detección de problemas.</li>
-                    <li>Desventajas: Dependencia del concentrador central.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Facilidad de administración y detección de problemas.</li>
+                    <li>∘ Desventajas: Dependencia del concentrador central.</li>
                 </ul>
                 <p><marcador class="resaltado5">Topología de Bus:</marcador> En una topología de bus, todos los dispositivos están conectados a un solo cable principal. Los datos se transmiten a lo largo del cable y cada dispositivo decide si debe procesarlos o no. Si el cable principal se daña, toda la red se desconecta.</p>
-                <ul>
-                    <li>Ventajas: Simplicidad y bajo costo.</li>
-                    <li>Desventajas: Vulnerabilidad a fallas en el cable principal.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Simplicidad y bajo costo.</li>
+                    <li>∘ Desventajas: Vulnerabilidad a fallas en el cable principal.</li>
                 </ul>
                 <p><marcador class="resaltado5">Topología de Anillo:</marcador> En una topología de anillo, los dispositivos están conectados en un círculo cerrado. Los datos circulan en una dirección específica. Si un dispositivo falla, la comunicación se interrumpe, pero el anillo se puede reconfigurar para mantener la conexión.</p>
-                <ul>
-                    <li>Ventajas: Tolerancia a fallas y rendimiento constante.</li>
-                    <li>Desventajas: Dificultad de administración.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Tolerancia a fallas y rendimiento constante.</li>
+                    <li>∘ Desventajas: Dificultad de administración.</li>
                 </ul>
                 <p><marcador class="resaltado5">Topología de Mesh:</marcador> Cada dispositivo de red (nodo) está conectado a múltiples otros nodos para crear una malla de conexiones redundantes.</p>
-                <ul>
-                    <li>Ventajas: Cobertura Wi-Fi uniforme, tolerancia a fallas y escalabilidad.</li>
-                    <li>Desventajas: Costoso y puede ser complejo de configurar.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Cobertura Wi-Fi uniforme, tolerancia a fallas y escalabilidad.</li>
+                    <li>∘ Desventajas: Costoso y puede ser complejo de configurar.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/red2.png" alt="">
@@ -96,24 +96,24 @@
                 <p>El cableado es fundamental para la transmisión de datos en una red. Aquí están algunos tipos de cableado comunes junto con sus capacidades de velocidad y alcance:</p>
 
                 <p><marcador class="resaltado5">Fibra Óptica:</marcador> La fibra óptica utiliza hilos de vidrio o plástico para transmitir datos a través de pulsos de luz. Ofrece una alta velocidad y un largo alcance sin degradación de la señal.</p>
-                <ul>
-                    <li>Ventajas: Alta velocidad y larga distancia sin interferencias electromagnéticas.</p>
-                    <li>Desventajas: Costoso de implementar y mantener.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Alta velocidad y larga distancia sin interferencias electromagnéticas.</p>
+                    <li>∘ Desventajas: Costoso de implementar y mantener.</li>
                 </ul>
                 <p><marcador class="resaltado5">Cable UTP (Par Trenzado sin Apantallar):</marcador> El cable UTP es común en redes Ethernet y viene en varias categorías (por ejemplo, Cat 5e, Cat 6). Ofrece velocidades variadas y alcances medios.</p>
-                <ul>
-                    <li>Ventajas: Costo razonable y adecuado para redes locales.</li>
-                    <li>Desventajas: Vulnerable a interferencias electromagnéticas.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Costo razonable y adecuado para redes locales.</li>
+                    <li>∘ Desventajas: Vulnerable a interferencias electromagnéticas.</li>
                 </ul>
                 <p><marcador class="resaltado5">Cable Coaxial:</marcador> El cable coaxial se utiliza a menudo en redes de cable y ofrece velocidades y alcances decentes. También es resistente a interferencias.</p>
-                <ul>
-                    <li>Ventajas: Buena velocidad y resistencia a interferencias.</li>
-                    <li>Desventajas: Menos flexible que UTP y fibra óptica.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Buena velocidad y resistencia a interferencias.</li>
+                    <li>∘ Desventajas: Menos flexible que UTP y fibra óptica.</li>
                 </ul>
                 <p><marcador class="resaltado5">Cableado Trenzado Apantallado (STP):</marcador> El cableado trenzado apantallado es similar al UTP pero con una capa de protección adicional. Ofrece una mejor protección contra interferencias.</p>
-                <ul>
-                    <li>Ventajas: Mayor protección contra interferencias.</li>
-                    <li>Desventajas: Más costoso y menos común que el UTP.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Ventajas: Mayor protección contra interferencias.</li>
+                    <li>∘ Desventajas: Más costoso y menos común que el UTP.</li>
                 </ul>
                 <br>
                 <p>Elegir el dispositivo de red, la topología y el tipo de cableado adecuados depende de las necesidades específicas de tu red y del equilibrio entre rendimiento, costo y seguridad. Con esta comprensión, puedes diseñar una red que se adapte a tus necesidades.</p>
@@ -122,7 +122,7 @@
                 </div>
                 <h2>Tipos de Fibra Óptica</h2>
 
-                <h6><marcador class="resaltado">Fibra Óptica Monomodo (Single-Mode)</marcador></h6>
+                <h6>Fibra Óptica Monomodo (Single-Mode)</h6>
                 <p>Características Técnicas:</p>
                 <br>
                 <ul>
@@ -143,9 +143,8 @@
                 </ul>
                 <br>
                 <h6><marcador class="resaltado">Fibra Óptica de Modo Único vs. Multimodo</marcador></h6>
-                <ul>
-                    <li><marcador class="resaltado8">Diferencias Clave:</marcador> La fibra monomodo ofrece una mayor distancia de transmisión y ancho de banda en comparación con la fibra multimodo, pero es más costosa.</li>
-                </ul>
+                <p>La fibra monomodo ofrece una mayor distancia de transmisión y ancho de banda en comparación con la fibra multimodo, pero es más costosa.</p>
+
 
                 <div class="blog-image-grande">
                     <img src="media/red4.jpg" alt="">
@@ -161,11 +160,11 @@
                     <img src="media/red5.jpeg" alt="">
                 </div>
                 <h2>Cableado de Fibra Óptica vs. Cable UTP</h2>
-                <ul>
-                    <li><marcador class="resaltado8">Ancho de Banda:</marcador> La fibra óptica tiene un mayor ancho de banda en comparación con el cable UTP, lo que la hace adecuada para aplicaciones de alta velocidad.</li>
-                    <li><marcador class="resaltado8">Inmunidad a Interferencias:</marcador> La fibra óptica es inmune a las interferencias electromagnéticas, mientras que el UTP puede verse afectado por ellas.</li>
-                    <li><marcador class="resaltado8">Distancia:</marcador> La fibra óptica puede transmitir datos a distancias mucho mayores en comparación con el UTP.</li>
-                    <li><marcador class="resaltado8">Costo:</marcador> El cable UTP suele ser más económico que la fibra óptica.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ <marcador class="resaltado8">Ancho de Banda:</marcador> La fibra óptica tiene un mayor ancho de banda en comparación con el cable UTP, lo que la hace adecuada para aplicaciones de alta velocidad.</li>
+                    <li>∘ <marcador class="resaltado8">Inmunidad a Interferencias:</marcador> La fibra óptica es inmune a las interferencias electromagnéticas, mientras que el UTP puede verse afectado por ellas.</li>
+                    <li>∘ <marcador class="resaltado8">Distancia:</marcador> La fibra óptica puede transmitir datos a distancias mucho mayores en comparación con el UTP.</li>
+                    <li>∘ <marcador class="resaltado8">Costo:</marcador> El cable UTP suele ser más económico que la fibra óptica.</li>
                 </ul>
                 <br>
                 <p>La elección entre fibra óptica y cable UTP depende de las necesidades específicas de una red. La fibra óptica se prefiere en entornos donde se requiere alta velocidad, largas distancias y resistencia a interferencias, mientras que el cable UTP es más común en redes LAN locales y aplicaciones de corta distancia debido a su menor costo.</p>
